# aurum

./: .floo  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  go.mod  go.sum  id_25519  id_25519.pub  main.go
.github/workflows/: codeql-analysis.yml  docker.yml  go.yml  js.yml  rust.yml
.run/: go test aurum integration.run.xml  go test aurum.run.xml
clients/go/: client.go  embed.go  remote.go
clients/goclient/: client.go
clients/rust/: Cargo.toml
clients/typescript/: .eslintrc.js  index.ts  jest.config.js  package.json  tsconfig.json
clients/wasm/: .gitignore  build.sh  go.mod  go.sum  index.ts  main.go  package.json
clients/web/: Dockerfile  package.json
cmd/aurum/: changeemail.go  changepassword.go  changeserver.go  clientmanager.go  cmd.go  commands.go  editusergroups.go  grouplist.go  home.go  login.go  login_register.go  main.go  main_screen.go  register.go  screenlogin.go  screenmain.go  screenuser.go  user.go  userlist.go
cmd/keygen/: keygenutil.go  keygenutil_test.go  main.go
core/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
core/config/: config.go  config_test.go  keys.go  keys_test.go
core/db/: SQLConnection.go  db.go  models.go  sql.go
core/hash/: hash.go  hash_test.go
core/jwt/: jwt.go  jwt_test.go
core/passwords/: passwords.go  passwords_test.go
core/util/: hash_test.go
core/web/: AuthEndpoints.go  AuthEndpoints_test.go  UserEndpoints.go  UserEndpoints_test.go  jwt.go  jwt_test.go  web.go  web_integration_test.go  web_test.go
deployment/docker/: docker-compose.yml
docs/: Dockerfile  apidoc.json  gen-apidoc.sh  generate_godocs.sh
docs/apidoc/: api_data.js  (+4 more)
rustclient/: Cargo.toml
rustclient/cli/: Cargo.toml
rustclient/cli/src/: error.rs  language.pest  main.rs  parser.rs
rustclient/mv/: Cargo.toml
rustclient/mv/src/: main.rs
rustclient/src/: error.rs  lib.rs  requests.rs  token.rs  user.rs
webclient/: .eslintrc.js  .gitignore  Dockerfile  README.md  config.sh  index.html  jest.config.js  jest.setup.js  package.json  tsconfig.json
(+152 files in other folders)
