[package]
name = "aurum-rs"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
reqwest = {version = "0.10.8", features = ["json", "blocking"]}
jsonwebtoken = "7.2.0"
