[package]
name = "aurum_rs"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2"
serde = {version = "1.0.116", features = ["derive"]}
serde_repr = "0.1.6"
serde_json = "1.0.57"
reqwest = {version = "0.10.8", features = ["json", "blocking"]}
jwt-simple = "0.1.9"
der-parser = "4.1.0"
base64 = "0.12.3"
log = "0.4.11"

[dev-dependencies]
httpmock = "0.4.0"
ring = "0.16.15"
