[package]
name = "cli"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
url = "2.1.1"
aurum_rs = {path = "..", version="0.1.0"}
log = "0.4.11"
simple_logger = "1.9.0"
rpassword = "5.0.0"
itertools = "0.9.0"