[package]
name = "mv"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "1.4.1", default-features = false, features = []}

#hyper = {version = "0.13.7", default-features=false, features=["tcp"]}
#tokio = { version = "0.2", default-features=false, features=["macros"]}
